--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curise Booking</title>
+    <title>Curise Queen</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+    <link href="style.css" rel="css/bootstrap.min.css">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
         <div class="booking-content">
             <h1>Cruise Queen</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book./p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
 
 
@@ -57,21 +57,23 @@
             </div>
             <div class="input-group f-class">
                 <div>
-                    <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <label id="ticketPrice" for="">First Class ($150)</label>
+                    <input id="ticketCount" class="inp-style inp-width" type="number" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p>+ -</p>
+                    <button onclick="handleTicketChange(true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                    <button onclick="handleTicketChange(false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
                 </div>
             </div>
             
             <div class="input-group f-class">
                 <div>
-                    <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <label id="economyPrice" for="">Economy ($100)</label>
+                    <input id="economyCount" class="inp-style inp-width" type="number" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                    <button onclick="handleEconomyChange(true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                    <button onclick="handleEconomyChange(false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
                 </div>
             </div>
             <div class="calculations">
@@ -80,7 +82,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="totalPrice">$000</p>
                     </div>
                 </div>
 
@@ -89,7 +91,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="taxAmount">$00</p>
                     </div>
                 </div>
                 <hr>
@@ -98,13 +100,75 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="grantTotal">$000</p>
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button id="booking" class="btn-style">Book Now</button>
+        </div>
+        <div>
+            <h1 id="display-area" class="booking-text text-end text-white">Your Order is Under Water Trying to collecting.....</h1>
         </div>
     </main>
+
+    <script>
+// First Class Ticket Option
+    function handleTicketChange (isIncrease){
+        const ticketInput =  document.getElementById('ticketCount')
+            const ticketCount = parseInt(ticketInput.value)
+            let ticketNewCount = ticketInput
+            if(isIncrease == true ){
+                ticketNewCount = ticketCount + 1
+            }
+            if(isIncrease == false && ticketCount > 0){
+                ticketNewCount = ticketCount - 1
+            }
+            ticketInput.value = ticketNewCount
+            const ticketPrice = ticketNewCount * 150
+            document.getElementById('ticketPrice').innerText = '$' + ticketPrice 
+            calculateTotal()
+    }
+ // Economy Class Ticket Option
+    function handleEconomyChange (isIncrease){
+        const economyInput =  document.getElementById('economyCount')
+            const economyCount = parseInt(economyInput.value)
+            let economyNewCount = economyInput
+            if(isIncrease == true ){
+                economyNewCount = economyCount + 1
+            }
+            if(isIncrease == false && economyCount > 0){
+                economyNewCount = economyCount - 1
+            }
+            economyInput.value = economyNewCount
+            const economyPrice = economyNewCount * 100
+            document.getElementById('economyPrice').innerText = '$' + economyPrice 
+            calculateTotal()
+        }
+// Total Calculations
+    function calculateTotal (){
+        const ticketInput = document.getElementById('ticketCount')
+        const ticketCount = parseInt(ticketInput.value)
+
+        const economyInput = document.getElementById('economyCount')
+        const economyCount = parseInt(economyInput.value)
+
+        const totalPrice = ticketCount * 150 + economyCount * 100
+        document.getElementById('totalPrice').innerText = '$' + totalPrice
+
+        const tax = Math.round(totalPrice * 0.1)
+        document.getElementById('taxAmount').innerText = '$' + tax
+
+        const grantTotal = totalPrice + tax
+        document.getElementById('grantTotal').innerText = '$' + grantTotal
+    }
+// Book Now Option
+    const bookingBtn = document.getElementById("booking");
+      bookingBtn.addEventListener("click", function () {
+          console.log('clicked');
+        const displayArea = document.getElementById("display-area");
+        displayArea.style.display = "block";
+      });
+    </script>
 
     <!--Thank You-->
 </body>
